src/objects/Offers__c.object
<CustomObject>
    <description>Object to house DS Offer ID information</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Offer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field defaults as &quot;Active&quot;. If an offer is ever retired, the box may be unchecked for tracking purposes</inlineHelpText>
        <label>Active Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Images__c</fullName>
        <label>Number of Images</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Category__c</fullName>
        <label>Offering Category</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Ground Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Attractions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Tours and Sightseeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Travel Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Coupons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Walt Disney World® Resort Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Events and Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Golf Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Theme Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Restaurants and Nightlife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Ski Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - Special Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Air and Land Adventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Water Activities and Cruises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 - Culinary Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - Spa and Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 - Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 - Arts and Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 - Guide Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - Trip Protection Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - Vacation Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 - Overnight Excursions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33 - Car Rental Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 - Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offering_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Offering ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Redemption_Address_Info__c</fullName>
        <label>Redemption Address Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Branch_ID__c</fullName>
        <label>Vendor Branch ID</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Branch_Name__c</fullName>
        <label>Vendor Branch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Offering_ID__c</columns>
        <columns>NAME</columns>
        <columns>Offering_Category__c</columns>
        <columns>Number_of_Images__c</columns>
        <columns>Active_Offer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offer Description</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00NC0000004z2yfMAA</fullName>
        <active>true</active>
        <field>Case.Offer__c</field>
        <filterItems>
            <field>Offers__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Case_Offer</name>
        <sourceObject>Case</sourceObject>
    </namedFilters>
    <pluralLabel>Offers</pluralLabel>
    <recordTypes>
        <fullName>Destination_Services</fullName>
        <active>true</active>
        <label>Destination Services</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>